--- a/views/labels.ejs
+++ b/views/labels.ejs
@@ -4,14 +4,15 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Bootstrap demo</title>
+   <title>Songs Labels</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
-   <h1>Hello, world!</h1>
+   <h1>Songs</h1>
 
+   <a class="btn btn-outline-success" href="labels/detail">Detail Duration</a>
    <table class="table  table-striped">
       <thead>
          <tr>
