--- a/views/labelDetails.ejs
+++ b/views/labelDetails.ejs
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-   <h1>Label List</h1>
+   <h1>Detail Label</h1>
 
-   <a class="btn btn-outline-success" href="labels/detail">Detail Duration</a>
+
    <table class="table  table-striped">
       <thead>
          <tr>
@@ -20,6 +20,9 @@
             <th scope="col">Name</th>
             <th scope="col">Since</th>
             <th scope="col">City</th>
+            <th scope="col">AVG</th>
+            <th scope="col">MIN</th>
+            <th scope="col">MAX</th>
          </tr>
       </thead>
       <tbody>
@@ -39,13 +42,23 @@
                <td>
                   <%= label.city %>
                </td>
+               <td>
+                  <%= label.averageDuration %>
+               </td>
+               <td>
+                  <%= label.minDuration %>
+               </td>
+               <td>
+                  <%= label.maxDuration %>
+               </td>
             </tr>
             <% }); %>
 
-
-
       </tbody>
    </table>
+
+   <a class="btn btn-outline-dark" href="/labels">Back</a>
+
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"></script>
