--- a/views/songDetail.ejs
+++ b/views/songDetail.ejs
@@ -49,48 +49,34 @@
    </nav>
 
 
-   <table class="table  table-striped">
-      <thead>
-         <tr class="table-info">
-            <th scope="col">Title</th>
-            <th scope="col">Band Name</th>
-            <th scope="col">Duration</th>
-            <th scope="col">Genre</th>
-            <th scope="col">Total Vote</th>
-            <th scope="col">Action</th>
-         </tr>
-      </thead>
-      <tbody>
+   <div class="container">
+      <h4>Song Detail</h4>
+      <div>
+         <p>
+            <%= data.title %>
+         </p>
+         <img src="<%= data.imageUrl %>" alt="Song Picture" width="300" style="border-radius: 20px" />
+      </div>
 
-         <% data.forEach((song)=> {%>
+      <p>Total Vote : <%= data.totalVote %>
+      </p>
+      <a class="btn btn-primary" href="/songs/<%= data.id %>/vote">Vote</a>
+      <p>Band Name : <%= data.bandName %>
+      </p>
+      <p>Duration : <%= data.duration %>
+      </p>
+      <p>Genre : <%= data.genre %>
+      </p>
 
-            <tr>
-               <th scope="row">
-                  <%=song.title%>
-               </th>
-               <td>
-                  <%= song.bandName %>
-               </td>
-               <td>
-                  <%= song.duration%>
-               </td>
-               <td>
-                  <%= song.genre %>
-               </td>
-               <td>
-                  <%= song.totalVote %>
-               </td>
-               <td>
-                  <a href="/songs/<%= song.id %>" class="btn btn-success">Read</a>
-                  <a href="Edit" class="btn btn-warning">Edit</a>
-                  <a href="Delete" class="btn btn-danger">Delete</a>
-               </td>
-            </tr>
-            <% }); %>
+      <p>Release date : <%= data.formatDate %>
+      </p>
+      <p style="white-space: pre-line">Lyric : <%= data.lyric %>
+      </p>
+   </div>
 
 
 
-      </tbody>
+   </tbody>
    </table>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
