--- a/views/songs.ejs
+++ b/views/songs.ejs
@@ -48,50 +48,51 @@
       </div>
    </nav>
 
-
-   <table class="table  table-striped">
-      <thead>
-         <tr class="table-info">
-            <th scope="col">Title</th>
-            <th scope="col">Band Name</th>
-            <th scope="col">Duration</th>
-            <th scope="col">Genre</th>
-            <th scope="col">Total Vote</th>
-            <th scope="col">Action</th>
-         </tr>
-      </thead>
-      <tbody>
-
-         <% data.forEach((song)=> {%>
-
-            <tr>
-               <th scope="row">
-                  <%=song.title%>
-               </th>
-               <td>
-                  <%= song.bandName %>
-               </td>
-               <td>
-                  <%= song.duration%>
-               </td>
-               <td>
-                  <%= song.genre %>
-               </td>
-               <td>
-                  <%= song.totalVote %>
-               </td>
-               <td>
-                  <a href="/songs/<%= song.id %>" class="btn btn-success">Read</a>
-                  <a href="Edit" class="btn btn-warning">Edit</a>
-                  <a href="Delete" class="btn btn-danger">Delete</a>
-               </td>
+   <div class="container">
+      <table class="table  table-striped">
+         <thead>
+            <tr class="table-info">
+               <th scope="col">Title</th>
+               <th scope="col">Band Name</th>
+               <th scope="col">Duration</th>
+               <th scope="col">Genre</th>
+               <th scope="col">Total Vote</th>
+               <th scope="col">Action</th>
             </tr>
-            <% }); %>
+         </thead>
+         <tbody>
+            <a href="/songs/add" class="btn btn-primary">Add Song</a>
+            <% data.forEach((song)=> {%>
+
+               <tr>
+                  <th scope="row">
+                     <%=song.title%>
+                  </th>
+                  <td>
+                     <%= song.bandName %>
+                  </td>
+                  <td>
+                     <%= song.duration%>
+                  </td>
+                  <td>
+                     <%= song.genre %>
+                  </td>
+                  <td>
+                     <%= song.totalVote %>
+                  </td>
+                  <td>
+                     <a href="/songs/<%= song.id %>" class="btn btn-success">Read</a>
+                     <a href="Edit" class="btn btn-warning">Edit</a>
+                     <a href="Delete" class="btn btn-danger">Delete</a>
+                  </td>
+               </tr>
+               <% }); %>
 
 
 
-      </tbody>
-   </table>
+         </tbody>
+      </table>
+   </div>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"></script>
