--- a/views/formAddSong.ejs
+++ b/views/formAddSong.ejs
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Songs Labels</title>
+   <lyric>Songs Labels</lyric>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
@@ -16,41 +16,42 @@
             <label>
                Title
             </label>
-            <input type="text" class="form-control" name="title">
+            <input type="text" class="form-control" name="title" value="<%= old?.title || '' %>">
          </div>
          <div class="mb-3">
             <label>Band Name</label>
-            <input type="text" class="form-control" name="bandName">
+            <input type="text" class="form-control" name="bandName" value="<%= old?.bandName || '' %>">
          </div>
-         <div class="mb-3">
+         <div class=" mb-3">
             <label>Duration</label>
-            <input type="number" class="form-control" name="duration">
+            <input type="number" class="form-control" name="duration" placeholder="0"
+               value="<%= old?.duration ?? '' %>">
          </div>
-         <div class="mb-3">
+         <div class=" mb-3">
             <label>Genre</label>
             <select class="form-control" name="genre">
-               <option value="undifined">--Select--</option>
-               <option value="Rock">Rock</option>
-               <option value="Pop">Pop</option>
-               <option value="Dangdut">Dangdut</option>
-               <option value="Jazz">Jazz</option>
-               <option value="Other">Other</option>
+               <option value="">--Select--</option>
+               <option value="Rock" <%=old?.genre=="Rock" ? "selected" :"" %> >Rock</option>
+               <option value="Pop" <%=old?.genre=="Pop" ? "selected" :"" %>>Pop</option>
+               <option value="Dangdut" <%=old?.genre=="Dangdut" ? "selected" :"" %>>Dangdut</option>
+               <option value="Jazz" <%=old?.genre=="Jazz" ? "selected" :"" %>>Jazz</option>
+               <option value="Other" <%=old?.genre=="Other" ? "selected" :"" %>>Other</option>
             </select>
          </div>
          <div class="mb-3">
             <label>Lyric</label>
-            <input type="text" class="form-control" name="lyric">
+            <input type="text" class="form-control" name="lyric" value="<%= old?.lyric || '' %>">
          </div>
-         <div class="mb-3">
-            <label>Imgae</label>
-            <input type="text" class="form-control" name="imageUrl">
+         <div class=" mb-3">
+            <label>Image Url</label>
+            <input type="text" class="form-control" name="imageUrl" value="<%= old?.imageUrl || '' %>">
          </div>
-         <div class="mb-3">
+         <div class=" mb-3">
             <label class="form-label">Label</label>
             <select class="form-select" aria-label="Default select example" name="labelId">
-               <option value="--Select--">-Select-</option>
+               <option value="">-Select-</option>
                <% listLabels.forEach((label)=>{ %>
-                  <option value="<%= label.id%>">
+                  <option value="<%= label.id%>" <%=old?.labelId==label.id ? "selected" : "" %> >
                      <%=label.name %>
                   </option>
                   <% }) %>
@@ -58,7 +59,7 @@
          </div>
          <div class="mb-3">
             <label>Create date</label>
-            <input type="date" class="form-control" name="createdDate">
+            <input type="date" class="form-control" name="createdDate" value="<%= old?.createdDate || '' %>">
          </div>
 
          <button type="submit" class="btn btn-primary">Submit</button>
