R3: shared form for add or update

--- a/views/oneFormAddUpdate.ejs
+++ b/views/oneFormAddUpdate.ejs
@@ -11,46 +11,55 @@
 
 <body>
    <div class="container">
-
+      <label for="">
+         <%=action%>
+      </label>
       <form action="<%=action%>" method="post">
 
          <div class="mb-3">
-            <label>
-               Title
+            <label>Title
+               <% if (errors.title) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.title %>
+                  </small>
+                  <% } %>
             </label>
             <input type="text" class="form-control <%= errors.title ? 'is-invalid' : '' %>" name="title"
                value="<%= old?.title || '' %>">
-            <% if (errors.title) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.title %>
-               </small>
-               <% } %>
          </div>
 
          <div class="mb-3">
-            <label>Band Name</label>
+            <label>Band Name
+               <% if (errors.bandName) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.bandName %>
+                  </small>
+                  <% } %>
+            </label>
             <input type="text" class="form-control <%= errors.bandName ? 'is-invalid' : '' %>" name="bandName"
                value="<%= old?.bandName || '' %>">
-            <% if (errors.bandName) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.bandName %>
-               </small>
-               <% } %>
          </div>
 
          <div class=" mb-3">
-            <label>Duration</label>
+            <label>Duration
+               <% if (errors.duration) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.duration %>
+                  </small>
+                  <% } %>
+            </label>
             <input type="number" class="form-control <%= errors.duration ? 'is-invalid' : '' %>" name="duration"
                placeholder="0" value="<%= old?.duration ?? '' %>">
-            <% if (errors.duration) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.duration %>
-               </small>
-               <% } %>
          </div>
 
          <div class=" mb-3">
-            <label>Genre</label>
+            <label>Genre
+               <% if (errors.genre) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.genre %>
+                  </small>
+                  <% } %>
+            </label>
             <select class="form-control <%= errors.genre ? 'is-invalid' : '' %>" name="genre">
                <option value="">--Select--</option>
                <option value="Rock" <%=old?.genre=="Rock" ? "selected" :"" %> >Rock</option>
@@ -59,37 +68,40 @@
                <option value="Jazz" <%=old?.genre=="Jazz" ? "selected" :"" %>>Jazz</option>
                <option value="Other" <%=old?.genre=="Other" ? "selected" :"" %>>Other</option>
             </select>
-            <% if (errors.genre) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.genre %>
-               </small>
-               <% } %>
          </div>
 
          <div class="mb-3">
-            <label>Lyric</label>
+            <label>Lyric
+               <% if (errors.lyric) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.lyric %>
+                  </small>
+                  <% } %>
+            </label>
             <input type="text" class="form-control <%= errors.lyric ? 'is-invalid' : '' %>" name="lyric"
                value="<%= old?.lyric || '' %>">
-            <% if (errors.lyric) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.lyric %>
-               </small>
-               <% } %>
          </div>
 
          <div class=" mb-3">
-            <label>Image Url</label>
+            <label>Image Url
+               <% if (errors.imageUrl) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.imageUrl %>
+                  </small>
+                  <% } %>
+            </label>
             <input type="text" class="form-control <%= errors.imageUrl ? 'is-invalid' : '' %>" name="imageUrl"
                value="<%= old?.imageUrl || '' %>">
-            <% if (errors.imageUrl) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.imageUrl %>
-               </small>
-               <% } %>
          </div>
 
          <div class=" mb-3">
-            <label class="form-label">Label</label>
+            <label class="form-label">Label
+               <% if (errors.labelId) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.labelId %>
+                  </small>
+                  <% } %>
+            </label>
             <select class="form-select  <%= errors.labelId? 'is-invalid' : '' %>" aria-label="Default select example"
                name="labelId">
                <option value="">-Select-</option>
@@ -99,22 +111,18 @@
                   </option>
                   <% }) %>
             </select>
-            <% if (errors.labelId) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.labelId %>
-               </small>
-               <% } %>
          </div>
 
          <div class="mb-3">
-            <label>Create date</label>
+            <label>Create date
+               <% if (errors.createdDate) { %>
+                  <small class="text-danger ms-2">
+                     <%= errors.createdDate %>
+                  </small>
+                  <% } %>
+            </label>
             <input type="date" class="form-control <%= errors.createdDate ? 'is-invalid' : '' %>" name="createdDate"
                value="<%= old?.createdDate || '' %>">
-            <% if (errors.createdDate) { %>
-               <small class="text-danger ms-2">
-                  <%= errors.createdDate %>
-               </small>
-               <% } %>
          </div>
 
          <button type="submit" class="btn btn-primary">
