--- a/views/songDetail.ejs
+++ b/views/songDetail.ejs
@@ -10,77 +10,39 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Songs</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-      </button>
+   <%-include("_navbar")%>
+      <div class="container">
+         <h4>Song Detail</h4>
+         <div>
+            <p>
+               <%= data.title %>
+            </p>
+            <img src="<%= data.imageUrl %>" alt="Song Picture" width="300" style="border-radius: 20px" />
+         </div>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-               </a>
-               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-               </div>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-         </ul>
-         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-         </form>
-      </div>
-   </nav>
-
-
-   <div class="container">
-      <h4>Song Detail</h4>
-      <div>
-         <p>
-            <%= data.title %>
+         <p>Total Vote : <%= data.totalVote %>
          </p>
-         <img src="<%= data.imageUrl %>" alt="Song Picture" width="300" style="border-radius: 20px" />
+         <a class="btn btn-primary" href="/songs/<%= data.id %>/vote">Vote</a>
+         <p>Band Name : <%= data.bandName %>
+         </p>
+         <p>Duration : <%= data.duration %>
+         </p>
+         <p>Genre : <%= data.genre %>
+         </p>
+
+         <p>Release date : <%= data.formatDate %>
+         </p>
+         <p style="white-space: pre-line">Lyric : <%= data.lyric %>
+         </p>
       </div>
 
-      <p>Total Vote : <%= data.totalVote %>
-      </p>
-      <a class="btn btn-primary" href="/songs/<%= data.id %>/vote">Vote</a>
-      <p>Band Name : <%= data.bandName %>
-      </p>
-      <p>Duration : <%= data.duration %>
-      </p>
-      <p>Genre : <%= data.genre %>
-      </p>
-
-      <p>Release date : <%= data.formatDate %>
-      </p>
-      <p style="white-space: pre-line">Lyric : <%= data.lyric %>
-      </p>
-   </div>
 
 
-
-   </tbody>
-   </table>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
+      </tbody>
+      </table>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+         crossorigin="anonymous"></script>
 </body>
 
 </html>
