--- a/views/labels.ejs
+++ b/views/labels.ejs
@@ -10,81 +10,48 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-      </button>
+   <%-include("_navbar")%>
+      <div class="container">
+         <h4>Labels</h4>
+         <a class="btn btn-primary" href="labels/detail">Detail Duration</a>
+         <table class="table  table-striped">
+            <thead>
+               <tr>
+                  <th scope="col">id</th>
+                  <th scope="col">Name</th>
+                  <th scope="col">Since</th>
+                  <th scope="col">City</th>
+               </tr>
+            </thead>
+            <tbody>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-               </a>
-               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-               </div>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-         </ul>
-         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-         </form>
+               <% data.forEach((label)=> {%>
+
+                  <tr>
+                     <th scope="row">
+                        <%=label.id%>
+                     </th>
+                     <td>
+                        <%= label.name %>
+                     </td>
+                     <td>
+                        <%= label.formatDate%>
+                     </td>
+                     <td>
+                        <%= label.city %>
+                     </td>
+                  </tr>
+                  <% }); %>
+
+
+
+            </tbody>
+         </table>
       </div>
-   </nav>
 
-   <a class="btn btn-outline-success" href="labels/detail">Detail Duration</a>
-   <table class="table  table-striped">
-      <thead>
-         <tr>
-            <th scope="col">id</th>
-            <th scope="col">Name</th>
-            <th scope="col">Since</th>
-            <th scope="col">City</th>
-         </tr>
-      </thead>
-      <tbody>
-
-         <% data.forEach((label)=> {%>
-
-            <tr>
-               <th scope="row">
-                  <%=label.id%>
-               </th>
-               <td>
-                  <%= label.name %>
-               </td>
-               <td>
-                  <%= label.formatDate%>
-               </td>
-               <td>
-                  <%= label.city %>
-               </td>
-            </tr>
-            <% }); %>
-
-
-
-      </tbody>
-   </table>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+         crossorigin="anonymous"></script>
 </body>
 
 </html>
