--- a/views/oneFormAddUpdate.ejs
+++ b/views/oneFormAddUpdate.ejs
@@ -10,135 +10,136 @@
 </head>
 
 <body>
-   <div class="container">
-      <label for="">
-         <%=action%>
-      </label>
-      <form action="<%=action%>" method="post">
 
-         <div class="mb-3">
-            <label>Title
-               <% if (errors.title) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.title %>
-                  </small>
-                  <% } %>
-            </label>
-            <input type="text" class="form-control <%= errors.title ? 'is-invalid' : '' %>" name="title"
-               value="<%= old?.title || '' %>">
-         </div>
-
-         <div class="mb-3">
-            <label>Band Name
-               <% if (errors.bandName) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.bandName %>
-                  </small>
-                  <% } %>
-            </label>
-            <input type="text" class="form-control <%= errors.bandName ? 'is-invalid' : '' %>" name="bandName"
-               value="<%= old?.bandName || '' %>">
-         </div>
-
-         <div class=" mb-3">
-            <label>Duration
-               <% if (errors.duration) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.duration %>
-                  </small>
-                  <% } %>
-            </label>
-            <input type="number" class="form-control <%= errors.duration ? 'is-invalid' : '' %>" name="duration"
-               placeholder="0" value="<%= old?.duration ?? '' %>">
-         </div>
-
-         <div class=" mb-3">
-            <label>Genre
-               <% if (errors.genre) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.genre %>
-                  </small>
-                  <% } %>
-            </label>
-            <select class="form-control <%= errors.genre ? 'is-invalid' : '' %>" name="genre">
-               <option value="">--Select--</option>
-               <option value="Rock" <%=old?.genre=="Rock" ? "selected" :"" %> >Rock</option>
-               <option value="Pop" <%=old?.genre=="Pop" ? "selected" :"" %>>Pop</option>
-               <option value="Dangdut" <%=old?.genre=="Dangdut" ? "selected" :"" %>>Dangdut</option>
-               <option value="Jazz" <%=old?.genre=="Jazz" ? "selected" :"" %>>Jazz</option>
-               <option value="Other" <%=old?.genre=="Other" ? "selected" :"" %>>Other</option>
-            </select>
-         </div>
-
-         <div class="mb-3">
-            <label>Lyric
-               <% if (errors.lyric) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.lyric %>
-                  </small>
-                  <% } %>
-            </label>
-            <input type="text" class="form-control <%= errors.lyric ? 'is-invalid' : '' %>" name="lyric"
-               value="<%= old?.lyric || '' %>">
-         </div>
-
-         <div class=" mb-3">
-            <label>Image Url
-               <% if (errors.imageUrl) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.imageUrl %>
-                  </small>
-                  <% } %>
-            </label>
-            <input type="text" class="form-control <%= errors.imageUrl ? 'is-invalid' : '' %>" name="imageUrl"
-               value="<%= old?.imageUrl || '' %>">
-         </div>
-
-         <div class=" mb-3">
-            <label class="form-label">Label
-               <% if (errors.labelId) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.labelId %>
-                  </small>
-                  <% } %>
-            </label>
-            <select class="form-select  <%= errors.labelId? 'is-invalid' : '' %>" aria-label="Default select example"
-               name="labelId">
-               <option value="">-Select-</option>
-               <% listLabels.forEach((label)=>{ %>
-                  <option value="<%= label.id%>" <%=old?.labelId==label.id ? "selected" : "" %> >
-                     <%=label.name %>
-                  </option>
-                  <% }) %>
-            </select>
-         </div>
-
-         <div class="mb-3">
-            <label>Create date
-               <% if (errors.createdDate) { %>
-                  <small class="text-danger ms-2">
-                     <%= errors.createdDate %>
-                  </small>
-                  <% } %>
-            </label>
-            <input type="date" class="form-control <%= errors.createdDate ? 'is-invalid' : '' %>" name="createdDate"
-               value="<%= old?.createdDate || '' %>">
-         </div>
-
-         <button type="submit" class="btn btn-primary">
-            <%=isUpdate ? "Update" : "Add" %>
-         </button>
-      </form>
-
-   </div>
+   <%-include("_navbar")%>
 
 
+      <div class="container">
+         <form action="<%=action%>" method="post">
 
-   </tbody>
-   </table>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
+            <div class="mb-3">
+               <label>Title
+                  <% if (errors.title) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.title %>
+                     </small>
+                     <% } %>
+               </label>
+               <input type="text" class="form-control <%= errors.title ? 'is-invalid' : '' %>" name="title"
+                  value="<%= old?.title || '' %>">
+            </div>
+
+            <div class="mb-3">
+               <label>Band Name
+                  <% if (errors.bandName) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.bandName %>
+                     </small>
+                     <% } %>
+               </label>
+               <input type="text" class="form-control <%= errors.bandName ? 'is-invalid' : '' %>" name="bandName"
+                  value="<%= old?.bandName || '' %>">
+            </div>
+
+            <div class=" mb-3">
+               <label>Duration
+                  <% if (errors.duration) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.duration %>
+                     </small>
+                     <% } %>
+               </label>
+               <input type="number" class="form-control <%= errors.duration ? 'is-invalid' : '' %>" name="duration"
+                  placeholder="0" value="<%= old?.duration ?? '' %>">
+            </div>
+
+            <div class=" mb-3">
+               <label>Genre
+                  <% if (errors.genre) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.genre %>
+                     </small>
+                     <% } %>
+               </label>
+               <select class="form-control <%= errors.genre ? 'is-invalid' : '' %>" name="genre">
+                  <option value="">--Select--</option>
+                  <option value="Rock" <%=old?.genre=="Rock" ? "selected" :"" %> >Rock</option>
+                  <option value="Pop" <%=old?.genre=="Pop" ? "selected" :"" %>>Pop</option>
+                  <option value="Dangdut" <%=old?.genre=="Dangdut" ? "selected" :"" %>>Dangdut</option>
+                  <option value="Jazz" <%=old?.genre=="Jazz" ? "selected" :"" %>>Jazz</option>
+                  <option value="Other" <%=old?.genre=="Other" ? "selected" :"" %>>Other</option>
+               </select>
+            </div>
+
+            <div class="mb-3">
+               <label>Lyric
+                  <% if (errors.lyric) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.lyric %>
+                     </small>
+                     <% } %>
+               </label>
+               <input type="text" class="form-control <%= errors.lyric ? 'is-invalid' : '' %>" name="lyric"
+                  value="<%= old?.lyric || '' %>">
+            </div>
+
+            <div class=" mb-3">
+               <label>Image Url
+                  <% if (errors.imageUrl) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.imageUrl %>
+                     </small>
+                     <% } %>
+               </label>
+               <input type="text" class="form-control <%= errors.imageUrl ? 'is-invalid' : '' %>" name="imageUrl"
+                  value="<%= old?.imageUrl || '' %>">
+            </div>
+
+            <div class=" mb-3">
+               <label class="form-label">Label
+                  <% if (errors.labelId) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.labelId %>
+                     </small>
+                     <% } %>
+               </label>
+               <select class="form-select  <%= errors.labelId? 'is-invalid' : '' %>" aria-label="Default select example"
+                  name="labelId">
+                  <option value="">-Select-</option>
+                  <% listLabels.forEach((label)=>{ %>
+                     <option value="<%= label.id%>" <%=old?.labelId==label.id ? "selected" : "" %> >
+                        <%=label.name %>
+                     </option>
+                     <% }) %>
+               </select>
+            </div>
+
+            <div class="mb-3">
+               <label>Create date
+                  <% if (errors.createdDate) { %>
+                     <small class="text-danger ms-2">
+                        <%= errors.createdDate %>
+                     </small>
+                     <% } %>
+               </label>
+               <input type="date" class="form-control <%= errors.createdDate ? 'is-invalid' : '' %>" name="createdDate"
+                  value="<%= old?.createdDate || '' %>">
+            </div>
+
+            <button type="submit" class="btn btn-primary">
+               <%=isUpdate ? "Update" : "Add" %>
+            </button>
+         </form>
+
+      </div>
+
+
+
+      </tbody>
+      </table>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+         crossorigin="anonymous"></script>
 </body>
 
 </html>
