--- a/views/songs.ejs
+++ b/views/songs.ejs
@@ -10,94 +10,69 @@
 </head>
 
 <body>
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Songs</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
-      </button>
+   <%-include("_navbar")%>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-               </a>
-               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-               </div>
-            </li>
-            <li class="nav-item">
-               <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-         </ul>
-         <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-         </form>
-      </div>
-   </nav>
+      <div class="container">
 
-   <div class="container">
-      <table class="table  table-striped">
-         <thead>
-            <tr class="table-info">
-               <th scope="col">Title</th>
-               <th scope="col">Band Name</th>
-               <th scope="col">Duration</th>
-               <th scope="col">Genre</th>
-               <th scope="col">Total Vote</th>
-               <th scope="col">Action</th>
-            </tr>
-         </thead>
-         <tbody>
-            <div class="my-3">
-               <a href="/songs/add" class="btn btn-primary">Add Song</a>
-            </div>
-            <% data.forEach((song)=> {%>
+         <div class="my-3">
+            <a href="/songs/add" class="btn btn-primary">Add Song</a>
+         </div>
+         <nav class="navbar navbar-light bg-light">
+            <form action="/songs" method="get" class="form-inline d-flex">
+               <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q"
+                  value="<%= q %>">
+               <button class=" btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
+            </form>
+         </nav>
 
-               <tr>
-                  <th scope="row">
-                     <%=song.title%>
-                  </th>
-                  <td>
-                     <%= song.bandName %>
-                  </td>
-                  <td>
-                     <%= song.duration%>
-                  </td>
-                  <td>
-                     <%= song.genre %>
-                  </td>
-                  <td>
-                     <%= song.totalVote %>
-                  </td>
-                  <td>
-                     <a href="/songs/<%= song.id %>" class="btn btn-success">Read</a>
-                     <a href="songs/<%= song.id %>/update" class="btn btn-warning">Edit</a>
-                     <a href="songs/<%= song.id %>/delete" class="btn btn-danger">Delete</a>
-                  </td>
+
+         <table class="table  table-striped">
+            <thead>
+               <tr class="table-info">
+                  <th scope="col">Title</th>
+                  <th scope="col">Band Name</th>
+                  <th scope="col">Duration</th>
+                  <th scope="col">Genre</th>
+                  <th scope="col">Total Vote</th>
+                  <th scope="col">Action</th>
                </tr>
-               <% }); %>
+            </thead>
+            <tbody>
+
+               <% data.forEach((song)=> {%>
+
+                  <tr>
+                     <th scope="row">
+                        <%=song.title%>
+                     </th>
+                     <td>
+                        <%= song.bandName %>
+                     </td>
+                     <td>
+                        <%= song.duration%>
+                     </td>
+                     <td>
+                        <%= song.genre %>
+                     </td>
+                     <td>
+                        <%= song.totalVote %>
+                     </td>
+                     <td>
+                        <a href="/songs/<%= song.id %>" class="btn btn-success">Read</a>
+                        <a href="songs/<%= song.id %>/update" class="btn btn-warning">Edit</a>
+                        <a href="songs/<%= song.id %>/delete" class="btn btn-danger">Delete</a>
+                     </td>
+                  </tr>
+                  <% }); %>
 
 
 
-         </tbody>
-      </table>
-   </div>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"></script>
+            </tbody>
+         </table>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+         crossorigin="anonymous"></script>
 </body>
 
 </html>
